--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Make the Fake</title>
+    <title>Endless Runner</title>
     <style>
         body{
             background-color: white;
@@ -13,7 +13,6 @@
 <body>
     <script src="lib/phaser.js"></script>
     <script src="src/prefabs/Obstacle.js"></script>
-    <script src="src/prefabs/Player.js"></script>
     <script src="src/scenes/Menu.js"></script>
     <script src="src/scenes/Credits.js"></script>
     <script src="src/scenes/Play.js"></script>
